testsuite/tests/typecheck/should_fail/tcfail038.stderr
tcfail038.hs:9:11: error: [GHC-10498]
    Conflicting definitions for ‘==’
  |
9 |         a == b = False
  |           ^^
  |
7 |         a == b = True
  |           ^^

tcfail038.hs:10:11: error: [GHC-10498]
    Conflicting definitions for ‘/=’
   |
10 |         a /= b = True
   |           ^^
   |
 8 |         a /= b = False
   |           ^^

